fixed z-index on project labels

--- a/project-tracker/WebContent/app/style/app.css
+++ b/project-tracker/WebContent/app/style/app.css
@@ -94,6 +94,7 @@ md-toolbar:not(.md-menu-toolbar) {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e0e0e', endColorstr='#353535',GradientType=0 ); /* IE6-9 */
 	
 	color:#efefef;
+	z-index: 500;
 }
 
 md-toolbar:not(.md-menu-toolbar) .md-button {
